Cambio de rutas

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
             <div class="images-container">
                 <div class="image-card">
-                    <img src="./imagenes/Afuera-compuertas-logicas.jpg" alt="Símbolos de compuertas lógicas">
+                    <img src="./Imagenes/Afuera-compuertas-logicas.jpg" alt="Símbolos de compuertas lógicas">
                     <p><strong>Símbolos de Compuertas Lógicas</strong></p>
                 </div>
                 <div class="image-card">
-                    <img src="./imagenes/img_OrNotAnd.png" alt="Diagramas OR, NOT y AND">
+                    <img src="./Imagenes/img_OrNotAnd.png" alt="Diagramas OR, NOT y AND">
                     <p><strong>Diagramas de Compuertas OR, NOT y AND</strong></p>
                 </div>
             </div>
