modificacion de de tercer deber

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 <a href="segundoDeber.html">Segundo Deber</a>
                 <a href="tercerDeber.html">Tercer Deber</a>
                 <a href="Actividad1Tinkercad.html">Actividad 1</a>
+                <a href="Actividad2Tinkercad.html">Actividad2</a>
+                
             </div>
             <h1>Compuertas Lógicas</h1>
             <p class="subtitle">Análisis y Simulación de Compuertas Lógicas Básicas (AND, OR y NOT)</p>
