--- a/segundoDeber.html
+++ b/segundoDeber.html
@@ -10,8 +10,10 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="index.html"> Primer Deber</a>
+                <a href="index.html"> Deber 1</a>
                 <a href="tercerDeber.html"> Tercer Deber</a>
+                <a href="Actividad1Tinkercad.html">Actividad 1</a>
+                <a href="Actividad2Tinkercad.html">Actividad 2</a>
             </div>
             <h1>Simulacion de circuito en serie y paralelo</h1>
             <p class="subtitle">Análisis y Simulación de Compuertas Lógicas Básicas (AND, OR y NOT)</p>
@@ -52,11 +54,11 @@
 
             <div class="images-container">
                 <div class="image-card">
-                    <img src="imagenes/Afuera-compuertas-logicas.jpg" alt="Símbolos de compuertas lógicas">
+                    <img src="./imagenes/Afuera-compuertas-logicas.jpg" alt="Símbolos de compuertas lógicas">
                     <p><strong>Símbolos de Compuertas Lógicas</strong></p>
                 </div>
                 <div class="image-card">
-                    <img src="imagenes/img_OrNotAnd.png" alt="Diagramas OR, NOT y AND">
+                    <img src="./imagenes/img_OrNotAnd.png" alt="Diagramas OR, NOT y AND">
                     <p><strong>Diagramas de Compuertas OR, NOT y AND</strong></p>
                 </div>
             </div>
