actividades 3 y 4 otra vez

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                 <a href="segundoDeber.html">Segundo Deber</a>
                 <a href="tercerDeber.html">Tercer Deber</a>
                 <a href="Actividad1Tinkercad.html">Actividad 1</a>
-                <a href="Actividad2Tinkercad.html">Actividad2</a>
+                <a href="Actividad2Tinkercad.html">Actividad 2</a><br>
+                <a href="Actividad3Tinkercad.html">Actividad 3</a>
+                <a href="Actividad4Tinkercad.html">Actividad 4</a>
                 
             </div>
             <h1>Compuertas Lógicas</h1>
