--- a/Actividad1.html
+++ b/Actividad1.html
@@ -10,13 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="segundoDeber.html">Segundo Deber</a>
-                <a href="tercerDeber.html">Tercer Deber</a>
-                <a href="Actividad1Tinkercad.html">Actividad 1</a>
-                <a href="Actividad2Tinkercad.html">Actividad 2</a>
-                <a href="Actividad3Tinkercad.html">Actividad 3</a>
-                <a href="Actividad4Tinkercad.html">Actividad 4</a>
-                <a href="Actividad5.Tinkercad.html">Actividad 5</a>
+                <a href="Index.html">Inicio</a>
             </div>
             <h1>Compuertas Lógicas</h1>
             <p class="subtitle">Análisis y Simulación de Compuertas Lógicas Básicas (AND, OR y NOT)</p>
