--- a/index.html
+++ b/index.html
@@ -1,11 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio - Tareas del Semestre</title>
+    <link rel="stylesheet" href="PortalStyle.css">
 </head>
 <body>
-    <a href="Actividad5.Tinkercad.html">actividad 5</a>
+    <div class="container">
+        <header class="header">
+            <div class="header-content">
+                <h1>Tareas de electronica</h1>                
+            </div>
+        </header>
+
+        <main class="main-content">
+            <div class="intro">
+                <h2>Actividades y tareas de 2do Semestre</h2>
+                <p>
+                    <!-- Introducir aqui una breve descripcion de las actividades y tareas especificas -->
+                </p>
+            </div>
+
+            <div class="tasks-grid">
+                <!-- Tarea 1 -->
+                <div class="task-card">                    
+                    <h3 class="task-title">Deber 1</h3>
+                    <p class="task-description">
+                        Análisis y Simulación de Compuertas Lógicas <br> "AND", "OR", "NOT".
+                    </p>
+                    <a href="Actividad1.html" class="task-link">Ver Tarea</a>
+                </div>
+
+                <!-- Tarea 2 -->
+                <div class="task-card">
+                    <h3 class="task-title">Deber 2</h3>
+                    <p class="task-description">
+                        Simulacion de circuito en serie y paralelo
+                    </p>
+                    <a href="segundoDeber.html" class="task-link">Ver Tarea</a>
+                </div>
+
+                <!-- Tarea 3 -->
+                <div class="task-card">                    
+                    <h3 class="task-title">Deber 3</h3>
+                    <p class="task-description">
+                        Conversiones Numéricas. <br> "Binario, Octal, Hexadecimal, Decimal"
+                    </p>
+                    <a href="tercerDeber.html" class="task-link">Ver Tarea</a>
+                </div>
+
+                <!-- Tarea 4 -->
+                <div class="task-card">
+                    <h3 class="task-title">Actividad 1</h3>
+                    <p class="task-description">
+                       Usando Tinkercad encender 7 leds utilizando una sola funcion
+                    </p>
+                    <a href="Actividad1Tinkercad.html" class="task-link">Ver Tarea</a>
+                </div>
+
+                <!-- Tarea 5 -->
+                <div class="task-card">
+                    <h3 class="task-title">Actividad 2</h3>
+                    <p class="task-description">
+                       Encender un foco si la distancia es mayor a 100cm, si es menor encender una alarma usando Tinkercad
+                    </p>
+                    <a href="Actividad2Tinkercad.html" class="task-link">Ver Tarea</a>
+                </div>
+
+                <!-- Tarea 6 -->
+                <div class="task-card">
+                    <h3 class="task-title">Actividad 3</h3>
+                    <p class="task-description">
+                        En un LCD escribir en la primera linea su nombre centrado.
+                        En la segunda fila escribir su apellido centrado.
+                        En las 4 esquinas escribir un caracter personalizado.
+                    </p>
+                    <a href="Actividad3Tinkercad.html" class="task-link">Ver Tarea</a>
+                </div>
+
+                <!-- Tarea 7 -->
+                <div class="task-card">
+                    <h3 class="task-title">Actividad 4</h3>
+                    <p class="task-description">
+                       Mostrar en LCD. En la primera fila mostrar la palabra "Distancia" en la segunda fila mostrar el valor de la distancia y concatenar "cm".
+                    </p>
+                    <a href="Actividad4Tinkercad.html" class="task-link">Ver Tarea</a>
+                </div>
+
+                <!-- Tarea 8 -->
+                <div class="task-card">
+                    <h3 class="task-title">Actividad 5</h3>
+                    <p class="task-description">
+                        Sistema de acceso:
+                        Si la contraseña es correcta mostrar en el lcd "Correcto" y encender un led, 
+                        si es incorrecto, mostrar un mensaje que diga "Incorrecto" y encender una alarma. 
+                    </p>
+                    <a href="Actividad5.Tinkercad.html" class="task-link">Ver Tarea</a>
+                </div>
+
+                
+            </div>
+        </main>
+
+        <footer class="footer">
+            <p>&copy; 2025 - Portfolio de Tareas del Semestre</p>
+        </footer>
+    </div>
 </body>
 </html>
