--- a/Actividad5.Tinkercad.html
+++ b/Actividad5.Tinkercad.html
@@ -1,17 +1,229 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividad 5</title>
+    <title>Sistema de Control de Acceso</title>
+    <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-    <a href="index.html">Volver</a>
-    <h2>Sistema de acceso mediante clave</h2>
-    <p>Sistema de acceso: <br>
-    Si la contraseña es correcta mostrar en el lcd "Correcto" y encender un led, <br>
-     si es incorrecto, mostrar un mensaje que diga "Incorrecto" y encender una alarma. 
-    </p>
-    <iframe width="725" height="453" src="https://www.tinkercad.com/embed/9eqsAp0reNP?editbtn=1" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+    <div class="container">
+        <div class="header">
+            <div class="nav-links">
+                <a href="Index.html">Inicio</a>                
+            </div>
+            <h1>Sistema de Control de Acceso</h1>
+            <p class="subtitle">Keypad Matricial 4x4 con LCD y Actuadores de Seguridad</p>
+        </div>
+
+        <div class="content">
+            <h2 id="objetivos">OBJETIVOS</h2>
+            <div class="objectives-grid">
+                <div class="objective-card">
+                    <h3>Objetivo General</h3>
+                    <p>Desarrollar un sistema de control de acceso mediante keypad matricial 4x4 y pantalla LCD, que verifique contraseñas y controle actuadores basado en la autenticación del usuario.</p>
+                </div>
+                <div class="specific-objectives">
+                    <h3>Objetivos Específicos</h3>
+                    <ul>
+                        <li>Implementar interfaz de entrada mediante keypad matricial 4x4 para ingreso de contraseña</li>
+                        <li>Programar sistema de verificación de contraseña con retroalimentación visual en LCD</li>
+                        <li>Configurar control automático: LED verde si contraseña correcta, alarma sonora si incorrecta</li>
+                        <li>Evaluar la funcionalidad y seguridad del sistema de control de acceso</li>
+                    </ul>
+                </div>
+            </div>
+
+            <h2 id="teoria">MARCO TEÓRICO</h2>
+            <div class="theory-section">
+                <div class="gate-card">
+                    <h3>Keypad Matricial 4x4</h3>
+                    <p>Dispositivo de entrada que permite detectar 16 teclas diferentes usando solo 8 pines del microcontrolador. Utiliza multiplexación de filas y columnas para identificar la tecla presionada mediante exploración secuencial de la matriz.</p>
+                </div>
+                <div class="gate-card">
+                    <h3>Sistema de Autenticación Digital</h3>
+                    <p>Proceso de verificación de credenciales mediante comparación de cadenas de caracteres. Incluye manejo de intentos fallidos, contadores de seguridad y bloqueo del sistema tras múltiples accesos no autorizados.</p>
+                </div>
+                <div class="gate-card">
+                    <h3>Interfaz de Usuario LCD</h3>
+                    <p>Pantalla LCD 16x2 que proporciona retroalimentación visual al usuario, mostrando prompts de entrada, asteriscos para ocultar la contraseña, mensajes de estado y contadores de intentos para mejorar la experiencia de usuario.</p>
+                </div>
+                <div class="gate-card">
+                    <h3>Control de Actuadores de Seguridad</h3>
+                    <p>LED verde indica acceso autorizado y sistema desbloqueado. Buzzer genera patrones sonoros diferenciados: tono simple para error, sirena continua para bloqueo del sistema tras múltiples intentos fallidos.</p>
+                </div>
+            </div>
+
+            <div class="images-container">
+                <div class="image-card">
+                    <img src="./Imagenes/CircuitoSistemaAcceso.jpg" alt="Circuito keypad y LCD">
+                    <p><strong>Circuito Sistema de Acceso: Keypad 4x4, LCD y Actuadores</strong></p>
+                </div>
+                <div class="image-card">
+                    <img src="./Imagenes/EsquemaSistemaAcceso.jpg" alt="Conexiones keypad matriz">
+                    <p><strong>Esquema de Conexiones Keypad Matricial con Arduino</strong></p>
+                </div>
+            </div>
+
+            <h2>MATERIALES Y EQUIPO</h2>
+            <div class="materials-grid">
+                <div class="material-item">Arduino UNO</div>
+                <div class="material-item">Keypad matricial 4x4</div>
+                <div class="material-item">LCD 16x2</div>
+                <div class="material-item">LED verde</div>
+                <div class="material-item">Buzzer piezoeléctrico</div>
+                <div class="material-item">Resistencia 220Ω</div>
+                <div class="material-item">Protoboard</div>
+                <div class="material-item">Cables de conexión</div>
+            </div>
+
+            <h2 id="procedimiento">PROCEDIMIENTO</h2>
+            <div class="procedure-steps">
+                <div class="procedure-step">
+                    Conectar LCD en modo paralelo: pines 12,11,5,4,3,2 del Arduino para RS, Enable, D4-D7 respectivamente.
+                </div>
+                <div class="procedure-step">
+                    Conectar keypad 4x4: filas a pines A3-A0, columnas a pines 13,10,9,8 del Arduino.
+                </div>
+                <div class="procedure-step">
+                    Conectar actuadores: LED verde al pin 7 con resistencia y buzzer al pin 6 del Arduino.
+                </div>
+                <div class="procedure-step">
+                    Programar interfaz de usuario: mostrar prompt "Ingrese la clave" y campo con corchetes [    ].
+                </div>
+                <div class="procedure-step">
+                    Implementar lógica de verificación: comparar entrada con clave "1234", activar LED si correcto, alarma si incorrecto.
+                </div>
+            </div>
+
+            <div class="simulation-container">
+                <h3>Simulación en Tinkercad - Sistema de Acceso</h3>
+                    <iframe width="725" height="453" src="https://www.tinkercad.com/embed/9eqsAp0reNP?editbtn=1" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>            </div>
+
+            <h2 id="resultados">TABLA DE RESULTADOS - SISTEMA DE ACCESO</h2>
+            <table class="results-table">
+                <thead>
+                    <tr>
+                        <th>Contraseña Ingresada</th>
+                        <th>Resultado Verificación</th>
+                        <th>Mensaje LCD</th>
+                        <th>Estado LED</th>
+                        <th>Estado Buzzer</th>
+                        <th>Observaciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1234</td>
+                        <td>Correcta</td>
+                        <td>Clave correcta</td>
+                        <td>Encendido</td>
+                        <td>Apagado</td>
+                        <td>Acceso autorizado</td>
+                    </tr>
+                    <tr>
+                        <td>1235</td>
+                        <td>Incorrecta</td>
+                        <td>Clave Incorrecta</td>
+                        <td>Apagado</td>
+                        <td>Tono error</td>
+                        <td>Primer intento fallido (1/3)</td>
+                    </tr>
+                    <tr>
+                        <td>4321</td>
+                        <td>Incorrecta</td>
+                        <td>Clave Incorrecta</td>
+                        <td>Apagado</td>
+                        <td>Tono error</td>
+                        <td>Segundo intento fallido (2/3)</td>
+                    </tr>
+                    <tr>
+                        <td>0000</td>
+                        <td>Incorrecta</td>
+                        <td>Clave Incorrecta</td>
+                        <td>Apagado</td>
+                        <td>Tono error</td>
+                        <td>Tercer intento fallido (3/3)</td>
+                    </tr>
+                    <tr>
+                        <td>Cualquiera</td>
+                        <td>Bloqueado</td>
+                        <td>SISTEMA BLOQUEADO</td>
+                        <td>Apagado</td>
+                        <td>Sirena continua</td>
+                        <td>Sistema bloqueado permanentemente</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <h2>TABLA DE FUNCIONALIDADES DEL SISTEMA</h2>
+            <table class="results-table">
+                <thead>
+                    <tr>
+                        <th>Función</th>
+                        <th>Descripción</th>
+                        <th>Estado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Ingreso de contraseña</td>
+                        <td>Captura de 4 dígitos desde keypad</td>
+                        <td>Funciona OK</td>
+                    </tr>
+                    <tr>
+                        <td>Ocultación con asteriscos</td>
+                        <td>Muestra * en lugar de números reales</td>
+                        <td>Funciona OK</td>
+                    </tr>
+                    <tr>
+                        <td>Verificación de clave</td>
+                        <td>Compara entrada con clave almacenada "1234"</td>
+                        <td>Funciona OK</td>
+                    </tr>
+                    <tr>
+                        <td>Contador de intentos</td>
+                        <td>Muestra intentos fallidos (1/3, 2/3, 3/3)</td>
+                        <td>Funciona OK</td>
+                    </tr>
+                    <tr>
+                        <td>Bloqueo de sistema</td>
+                        <td>Bloqueo permanente tras 3 intentos fallidos</td>
+                        <td>Funciona OK</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <h2>ANÁLISIS Y DISCUSIÓN</h2>
+            <div class="analysis-questions">
+                <ul>
+                    <li>¿El sistema de keypad matricial respondió correctamente a las pulsaciones? Sí, todas las teclas fueron detectadas con precisión y sin rebotes.</li>
+                    <li>¿La verificación de contraseña funcionó según lo esperado? El sistema comparó correctamente la entrada "1234" y rechazó todas las demás combinaciones.</li>
+                    <li>¿Qué medidas de seguridad implementa el sistema? Ocultación con asteriscos, contador de intentos y bloqueo permanente tras 3 fallos.</li>
+                    <li>¿Cómo se diferencia la respuesta entre acceso correcto e incorrecto? LED verde para acceso autorizado, buzzer con tonos diferenciados para errores y bloqueo.</li>
+                </ul>
+            </div>
+
+            <h2 id="conclusiones">CONCLUSIONES</h2>
+            <div class="conclusions-list">
+                <ul>
+                    <li>Se implementó exitosamente un sistema de control de acceso con keypad matricial 4x4 y verificación de contraseña</li>
+                    <li>La interfaz LCD proporciona retroalimentación clara al usuario con prompts, asteriscos de ocultación y mensajes de estado</li>
+                    <li>El sistema de seguridad multicapa incluye contador de intentos y bloqueo automático tras fallos repetidos</li>
+                    <li>Los actuadores diferenciados (LED verde/buzzer) proporcionan respuestas inmediatas y distintivas según el resultado</li>
+                    <li>El keypad matricial demostró ser una interfaz de entrada confiable y eficiente para sistemas embebidos</li>
+                    <li>El proyecto demuestra la implementación efectiva de un sistema de seguridad básico con componentes de bajo costo</li>
+                </ul>
+            </div>
+
+            <h2>ANEXOS</h2>
+            <div class="annexes-grid">
+                <div class="annex-item">Esquema de conexiones keypad matriz</div>
+                <div class="annex-item">Capturas de simulación Tinkercad</div>
+                <div class="annex-item">Tabla de caracteres del keypad</div>
+                <div class="annex-item">Código fuente del programa</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
