prueba solucion de problema de enlaces

--- a/Actividad1Tinkercad.html
+++ b/Actividad1Tinkercad.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="Index.html">Inicio</a>
+                <a href="./Index.html">Inicio</a>
             </div>
             <h1>Encender 7 leds usando una sola funcion</h1>
             <p class="subtitle">Lograr encender mediante una placa arduino 7 leds con una sola funcion</p>
