--- a/Actividad4Tinkercad.html
+++ b/Actividad4Tinkercad.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="Index.html">Inicio</a>
+                <a href="./Index.html">Inicio</a>
             </div>
             <h1>Medidor de Distancia con LCD</h1>
             <p class="subtitle">Sistema de Medición Ultrasónica con Visualización LCD y Control Automático de Actuadores</p>
