--- a/Actividad5.Tinkercad.html
+++ b/Actividad5.Tinkercad.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="Index.html">Inicio</a>                
+                <a href="./Index.html">Inicio</a>                
             </div>
             <h1>Sistema de Control de Acceso</h1>
             <p class="subtitle">Keypad Matricial 4x4 con LCD y Actuadores de Seguridad</p>
