--- a/Actividad3Tinkercad.html
+++ b/Actividad3Tinkercad.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="Index.html">Inicio</a>
+                <a href="./Index.html">Inicio</a>
             </div>
             <h1>Display LCD con Arduino</h1>
             <p class="subtitle">Implementación de Pantalla LCD 16x2 con Caracteres Personalizados y Texto Centrado</p>
