--- a/tercerDeber.html
+++ b/tercerDeber.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="index.html">Inicio</a>
+                <a href="./index.html">Inicio</a>
                 
                 
             </div>
