--- a/Actividad1.html
+++ b/Actividad1.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="./Index.html">Inicio</a>
+                <a href="./index.html">Inicio</a>
             </div>
             <h1>Compuertas Lógicas</h1>
             <p class="subtitle">Análisis y Simulación de Compuertas Lógicas Básicas (AND, OR y NOT)</p>
