--- a/Actividad2Tinkercad.html
+++ b/Actividad2Tinkercad.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="./Index.html">Inicio</a>
+                <a href="./index.html">Inicio</a>
             </div>
             <h1>Sistema de Detección por Ultrasonido</h1>
             <p class="subtitle">Implementación de Sistema Automatizado de Proximidad con Arduino UNO y Sensor HC-SR04</p>
