--- a/segundoDeber.html
+++ b/segundoDeber.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="nav-links">
-                <a href="./Index.html">Inicio</a>
+                <a href="./index.html">Inicio</a>
             </div>
             <h1>Simulacion de circuito en serie y paralelo</h1>
             <p class="subtitle">Analisis y simulacion de circuitos en serie y paralelo</p>
