agregando imagenes faltantes

--- a/segundoDeber.html
+++ b/segundoDeber.html
@@ -57,11 +57,11 @@
 
             <div class="images-container">
                 <div class="image-card">
-                    <img src="./imagenes/Afuera-compuertas-logicas.jpg" alt="Símbolos de compuertas lógicas">
+                    <img src="./imagenes/circuitoSerie.webp" alt="Símbolos de compuertas lógicas">
                     <p><strong>Símbolos de Compuertas Lógicas</strong></p>
                 </div>
                 <div class="image-card">
-                    <img src="./imagenes/img_OrNotAnd.png" alt="Diagramas OR, NOT y AND">
+                    <img src="./imagenes/circuitoParalelo.png" alt="Diagramas OR, NOT y AND">
                     <p><strong>Diagramas de Compuertas OR, NOT y AND</strong></p>
                 </div>
             </div>
