agregando titulo a imagenes

--- a/segundoDeber.html
+++ b/segundoDeber.html
@@ -58,11 +58,11 @@
             <div class="images-container">
                 <div class="image-card">
                     <img src="./imagenes/circuitoSerie.webp" alt="Símbolos de compuertas lógicas">
-                    <p><strong>Símbolos de Compuertas Lógicas</strong></p>
+                    <p><strong>Circuito en serie</strong></p>
                 </div>
                 <div class="image-card">
                     <img src="./imagenes/circuitoParalelo.png" alt="Diagramas OR, NOT y AND">
-                    <p><strong>Diagramas de Compuertas OR, NOT y AND</strong></p>
+                    <p><strong>Circuito en paralelo</strong></p>
                 </div>
             </div>
 
