--- a/segundoDeber.html
+++ b/segundoDeber.html
@@ -57,10 +57,10 @@
 
             <div class="images-container">
                 <div class="image-card">
-                    <img src="./imagenes/circuitoSerie.webp" alt="Símbolos de compuertas lógicas">
+                    <img src="./Imagenes/circuitoSerie.webp" alt="Símbolos de compuertas lógicas">
                     <p><strong>Circuito en serie</strong></p>
                 </div>
-                <div class="image-card">
+                <div class="Image-card">
                     <img src="./imagenes/circuitoParalelo.png" alt="Diagramas OR, NOT y AND">
                     <p><strong>Circuito en paralelo</strong></p>
                 </div>
