--- a/segundoDeber.html
+++ b/segundoDeber.html
@@ -60,10 +60,14 @@
                     <img src="./Imagenes/circuitoSerie.webp" alt="Símbolos de compuertas lógicas">
                     <p><strong>Circuito en serie</strong></p>
                 </div>
-                <div class="Image-card">
-                    <img src="./Imagenes/circuitoParalelo.png" alt="Diagramas OR, NOT y AND">
+                
+            </div>
+            <div class="images-container">
+                <div class="image-card">
+                    <img src="./Imagenes/CircParalelo.png" alt="Símbolos de compuertas lógicas">
                     <p><strong>Circuito en paralelo</strong></p>
                 </div>
+                
             </div>
 
             <h2>MATERIALES Y EQUIPO</h2>
